Updated package.json to troubleshoot dependencies

--- a/Assets/Sourav/Extensions/package.json
+++ b/Assets/Sourav/Extensions/package.json
@@ -16,6 +16,6 @@
       ],
       "dependencies":
       {
-        "com.sourav.debug": "https://github.com/sromic1990/DebugPackage.git#upm"
+        "com.sourav.debug": "1.0.5"
       }
 }
